# movie-theater-vr

./: README.md  miso-aframe.cabal  run.sh
app/: Main.hs
app/static/: all.js  ghcjsiClient.html  index.html
src/Miso/AFrame/: Core.hs
src/Miso/AFrame/Core/: Animation.hs  Types.hs
src/Miso/AFrame/Core/Primitives/: Circle.hs  ColladaModel.hs  Cone.hs  Curvedimage.hs  Cylinder.hs  Dodecahedron.hs  GltfModel.hs  Icosahedron.hs  Image.hs  Light.hs  Link.hs  ObjModel.hs  Octahedron.hs  Plane.hs  Ring.hs  Sky.hs  Sound.hs  Tetrahedron.hs  Torus.hs  TorusKnot.hs  Triangle.hs  Video.hs  Videosphere.hs
