name:                miso-aframe
version:             0.1
synopsis:            Miso bindings for A-Frame framework for WebVR.
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src/
  exposed-modules:
    Miso.AFrame

    Miso.AFrame.Core
    Miso.AFrame.Core.Animation
    Miso.AFrame.Core.Assets
    Miso.AFrame.Core.Component
    Miso.AFrame.Core.Components
    Miso.AFrame.Core.Entity
    Miso.AFrame.Core.Scene
    Miso.AFrame.Core.Types
    Miso.AFrame.Core.Internal.Utils

    Miso.AFrame.Core.Primitives.Box
    Miso.AFrame.Core.Primitives.Camera
    Miso.AFrame.Core.Primitives.Circle
    Miso.AFrame.Core.Primitives.ColladaModel
    Miso.AFrame.Core.Primitives.Cone
    Miso.AFrame.Core.Primitives.Curvedimage
    Miso.AFrame.Core.Primitives.Cursor
    Miso.AFrame.Core.Primitives.Cylinder
    Miso.AFrame.Core.Primitives.Dodecahedron
    Miso.AFrame.Core.Primitives.GltfModel
    Miso.AFrame.Core.Primitives.Icosahedron
    Miso.AFrame.Core.Primitives.Image
    Miso.AFrame.Core.Primitives.Light
    Miso.AFrame.Core.Primitives.Link
    Miso.AFrame.Core.Primitives.ObjModel
    Miso.AFrame.Core.Primitives.Octahedron
    Miso.AFrame.Core.Primitives.Plane
    Miso.AFrame.Core.Primitives.Ring
    Miso.AFrame.Core.Primitives.Sky
    Miso.AFrame.Core.Primitives.Sound
    Miso.AFrame.Core.Primitives.Sphere
    Miso.AFrame.Core.Primitives.Tetrahedron
    Miso.AFrame.Core.Primitives.Text
    Miso.AFrame.Core.Primitives.Torus
    Miso.AFrame.Core.Primitives.TorusKnot
    Miso.AFrame.Core.Primitives.Triangle
    Miso.AFrame.Core.Primitives.Video
    Miso.AFrame.Core.Primitives.Videosphere
  build-depends:
                base,
                ghcjs-base,
                aeson,
                unordered-containers,
                miso
  default-language: Haskell2010

executable movie-theater
  hs-source-dirs:      app/
  main-is:             Main.hs
  build-depends:
    base,
    ghcjs-base,
    aeson,
    miso-aframe,
    miso
  default-language:    Haskell2010
